@@ -3,73 +3,32 @@ package io.guw.knxutils.semanticanalyzer.characteristics.germany;
 import io.guw.knxutils.knxprojectparser.DatapointType;
 import io.guw.knxutils.knxprojectparser.GroupAddress;
 import io.guw.knxutils.knxprojectparser.GroupAddressRange;
-import io.guw.knxutils.semanticanalyzer.characteristics.ga.pattern.LightPattern;
 import io.guw.knxutils.semanticanalyzer.semanticmodel.meta.ModelType;
-import io.guw.knxutils.semanticanalyzer.semanticmodel.model.Light;
 import lombok.extern.slf4j.Slf4j;
 
 import java.util.List;
 import java.util.Map;
 
-import static io.guw.knxutils.knxprojectparser.DatapointType.ControlDimming;
-import static io.guw.knxutils.knxprojectparser.DatapointType.Scaling;
 import static io.guw.knxutils.knxprojectparser.GroupAddress.*;
-import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 import static io.guw.knxutils.semanticanalyzer.characteristics.ga.pattern.LightPattern.*;
+import static java.util.stream.Collectors.joining;
 
+/**
+ * pattern 1: assume GAs a created as blocks of 5 GAs (0=OnOff, 1=Dim, 2=Value, 3=StatusOnOff, 4=StatusValue)
+ */
 @Slf4j
 public class LightCharacteristics extends GenericCharacteristics{
 
-     @Override
      public GroupAddress findMatchingBrightnessGroupAddress(GroupAddress primarySwitchGroupAddress) {
-        // pattern 1: assume GAs a created as blocks of 5 GAs (0=OnOff, 1=Dim, 2=Value, 3=StatusOnOff, 4=StatusValue)
-        // TODO: this should be configurable
-        GroupAddress candidate = groupAddressByThreePartAddress
-                .get(GroupAddress.formatAsThreePartAddress(primarySwitchGroupAddress.getAddressInt() + Value.getOffset()));
-        if (candidate != null) {
-            log.debug("Evaluating potential candidate for GA {}: {}", primarySwitchGroupAddress, candidate);
-            if (isMatchOnNameAndDpt(candidate, primarySwitchGroupAddress, Scaling)) {
-                return candidate;
-            }
-        }
-
-        // give up
-        return null;
+        return findCandidate(primarySwitchGroupAddress, Value.getOffset(), Value.getDpt());
     }
 
-    @Override
     public GroupAddress findMatchingDimGroupAddress(GroupAddress primarySwitchGroupAddress) {
-        // pattern 1: assume GAs a created as blocks of 5 GAs (0=OnOff, 1=Dim, 2=Value, 3=StatusOnOff, 4=StatusValue)
-        // TODO: this should be configurable
-        GroupAddress candidate = groupAddressByThreePartAddress
-                .get(GroupAddress.formatAsThreePartAddress(primarySwitchGroupAddress.getAddressInt() + Dim.getOffset()));
-        if (candidate != null) {
-            log.debug("Evaluating potential candidate for GA {}: {}", primarySwitchGroupAddress, candidate);
-            if (isMatchOnNameAndDpt(candidate, primarySwitchGroupAddress, ControlDimming)) {
-                return candidate;
-            }
-        }
-
-        // give up
-        return null;
+        return findCandidate(primarySwitchGroupAddress, Dim.getOffset(), Dim.getDpt());
     }
 
-    @Override
     public GroupAddress findMatchingBrightnessStatusGroupAddress(GroupAddress primarySwitchGroupAddress) {
-        // pattern 1: assume GAs a created as blocks of 5 GAs (0=OnOff, 1=Dim, 2=Value, 3=StatusOnOff, 4=StatusValue)
-        // TODO: this should be configurable
-        GroupAddress candidate = groupAddressByThreePartAddress
-                .get(GroupAddress.formatAsThreePartAddress(primarySwitchGroupAddress.getAddressInt() + StatusValue.getOffset()));
-        if (candidate != null) {
-            log.debug("Evaluating potential candidate for GA {}: {}", primarySwitchGroupAddress, candidate);
-            if (isMatchOnNameAndDpt(candidate, primarySwitchGroupAddress, Scaling)) {
-                return candidate;
-            }
-        }
-
-        // give up
-        return null;
+        return findCandidate(primarySwitchGroupAddress, StatusValue.getOffset(), StatusValue.getDpt());
     }
 
     @Override
@@ -77,7 +36,7 @@ public class LightCharacteristics extends GenericCharacteristics{
         // preselect based on common patterns
         List<GroupAddress> candidates = findGroupAddressBlockCandidates(primarySwitchGroupAddress, 5).stream()
                 .filter(ga -> DatapointType.findByKnxProjectValue(ga.getDatapointType()) == DatapointType.State)
-                .collect(toList());
+                .toList();
         if (!candidates.isEmpty()) {
             if (candidates.size() == 1) {
                 GroupAddress candidate = candidates.get(0);
@@ -93,7 +52,7 @@ public class LightCharacteristics extends GenericCharacteristics{
 
         // pattern 2: status GA is in a different range
         List<GroupAddressRange> statusRanges = groupAddressRangeIndex.entrySet().stream()
-                .filter((e) -> containsStatusTerm(e.getValue().nameTerms)).map(Map.Entry::getKey).collect(toList());
+                .filter((e) -> containsStatusTerm(e.getValue().nameTerms)).map(Map.Entry::getKey).toList();
         for (GroupAddressRange statusRange : statusRanges) {
             int part1, part2, part3;
             if (statusRange.getParent() == null) {
